added styling and ability to request a specific dog breed image

--- a/styles.css
+++ b/styles.css
@@ -3,28 +3,45 @@
 }
 
 #header {
-  width: 100%;
-  padding: 30px 60px;
+  font-size: 8rem;
+  padding-left: 60px 40px;
+  margin: 10px;
+}
+
+#slogan {
+  padding: 20px 60px;
+  font-size: 2.25rem;
 }
 
 .logo {
-  font-family: 'Lobster', cursive;
-  font-size: 4.5rem;
+  font-family: 'Karla', sans-serif;
+  font-weight: 400;
+}
+
+.subheader-container {
+  display: flex;
+  justify-content: flex-start;
 }
 
 .subheader {
-  font-size: 3.3rem;
-  padding: 10px 60px;
+  font-size: 2rem;
+  padding-left: 220px;
+  padding-top: 80px;
 }
 
-.doggo-crate {
+#by-breed-section {
+  padding-left: 115px;
+  padding-top: 80px;
+}
+
+.doggo-container {
+  padding-left: 220px;
   display: flex;
   flex-wrap: wrap;
 }
 
 .button-container {
   display: flex;
-  flex-wrap: wrap;
   padding: 15px 60px;
 }
 .add-doggo-button {
@@ -33,7 +50,8 @@
 }
 
 .loading-wrapper {
-  margin-top: 20px;
+  margin-top: 10px;
+  margin-right: 10px;
   display: flex;
   justify-content: flex-start;
   height: 400px;
