adding archaic staged commits #yolo

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,27 @@
   flex-wrap: wrap;
 }
 
+.button {
+  display: inline-block;
+  outline: 0;
+  border: 0;
+  cursor: pointer;
+  border-radius: 8px;
+  padding: 14px 24px 16px;
+  font-family: 'Karla', sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1;
+  transition: transform 200ms, background 200ms;
+  background: transparent;
+  color: #000000;
+  box-shadow: 0 0 0 3px #000000 inset;
+}
+
+.button:hover {
+  transform: translateY(-2px);
+}
+
 .button-container {
   display: flex;
   padding: 15px 60px;
